<resources>
    <string name="app_name">ArpegGeo</string>
    <string name="search_bar_placeholder">Search</string>
    <string name="title_settings">Settings</string>
    <string name="title_playlists">Playlists</string>
    <string name="open_in_spotify">&lt;a href="%s">&lt;u>Open in Spotify&lt;/u>&lt;/a></string>
    <string name="spotify_link">Spotify link</string>
    <string name="setting_enable_arpeggeo">Enable ArpegGeo</string>
    <string name="setting_enable_sandbox">Enable Sandbox</string>
    <string name="play">Play</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="add_tag">Add Tag</string>
    <string name="edit_tag">Edit Tag</string>
    <string name="remove_tag">Remove Tag</string>
    <string name="clear_tags">Clear Tags</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="select_color">Select Color</string>
    <string name="entry_tag_name">Tag Name</string>
    <string name="confirm">Confirm</string>
    <string name="default_playlist_name">Playlist Name</string>
    <string name="default_tag_name">No tag</string>
    <string name="desc_icon_settings_button">settings button icon</string>
    <string name="desc_icon_add_button">add button icon</string>
    <string name="desc_icon_playlist_list_button">playlist list button icon</string>
    <string name="desc_icon_back_button">back button icon</string>
    <string name="desc_image_playlist_cover_image">playlist cover image</string>
    <string name="tmp_playlist_name_1">Byaheng UV Express</string>
    <string name="tmp_playlist_name_2">itchy nadal</string>
    <string name="tmp_tag_name_1">teka lang</string>
    <string name="tmp_tag_name_2">asdf</string>
</resources>