<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/dark_layer_1"
    android:padding="16dp">

    <!-- Header -->
    <!-- TODO: sticky header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <!-- Container for click listener -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/ic_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="32sp"
                android:textStyle="bold"
                android:text="@string/title_playlists" />

        </LinearLayout>

    </LinearLayout>

    <!-- Body -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Container for rounded corners -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="32dp"
            app:cardElevation="0dp" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/image_playlist_cover_1"
                android:contentDescription="@string/img_desc_playlist_cover_image"
                android:adjustViewBounds="true"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="32sp"
                android:textStyle="bold"
                android:text="@string/tmp_playlist_name_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple"
                android:textSize="16sp"
                android:text="@string/open_in_spotify" />

        </LinearLayout>


    </LinearLayout>

    <!-- TODO: use flowRow -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1" >

        <!-- Tag item 1 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/item_tag"
            android:backgroundTint="@color/tmp_tag1"
            android:textColor="@color/dark_layer_1"
            android:text="@string/tmp_tag_name_1" />

        <!-- Tag item 2 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@drawable/item_tag"
            android:backgroundTint="@color/tmp_tag2"
            android:textColor="@color/light_gray"
            android:text="@string/tmp_tag_name_2" />

    </LinearLayout>

    <!-- TODO: sticky footer -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginBottom="4dp"
        android:padding="8dp"
        android:background="@drawable/item_settings">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEdit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/light_gray"
            android:background="@drawable/item_button"
            android:backgroundTint="@color/blue"
            android:text="@string/edit" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:textColor="@color/light_gray"
            android:background="@drawable/item_button"
            android:backgroundTint="@color/red"
            android:text="@string/delete" />

    </LinearLayout>

</LinearLayout>