<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@drawable/item_bottom_sheet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Container for rounded corners -->
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/playlist_image"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@drawable/image_playlist_cover_1"
                android:contentDescription="@string/desc_image_playlist_cover_image"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playlist_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="32sp"
                android:textStyle="bold"
                android:text="@string/default_playlist_name"/>

            <TextView
                android:id="@+id/playlist_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/purple"
                android:textColorLink="@color/purple"
                android:text="@string/open_in_spotify"/>

        </LinearLayout>

    </LinearLayout>

    <!-- Tags Container -->
    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/tags_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:flexWrap="wrap"
        android:minHeight="64dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="8dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/light_gray"
            android:background="@drawable/item_button"
            android:backgroundTint="@color/blue"
            android:text="@string/edit"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:textColor="@color/light_gray"
            android:background="@drawable/item_button"
            android:backgroundTint="@color/red"
            android:text="@string/delete"/>
    </LinearLayout>

</LinearLayout>