<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@drawable/item_bottom_sheet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Container for rounded corners -->
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            android:backgroundTint="@color/dark_layer_2">

            <ImageView
                android:id="@+id/playlistImage"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_default_playlist_image"
                android:contentDescription="@string/desc_image_playlist_cover_image"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/playlistName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/gray"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColorHint="@color/dark_gray"
                android:focusable="false"
                android:hint="@string/default_playlist_name"/>

            <EditText
                android:id="@+id/playlistUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:textSize="16sp"
                android:textColor="@color/purple"
                android:textColorHint="@color/dark_gray"
                android:focusable="false"
                android:hint="@string/spotify_link"/>

        </LinearLayout>

    </LinearLayout>

    <!-- Tags Container -->
    <LinearLayout
        android:id="@+id/tagsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:minHeight="64dp">

        <!-- Container for rounded corners -->
        <androidx.cardview.widget.CardView
            android:id="@+id/tagCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/tagText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textSize="12sp"
                android:textColor="@color/dark_gray"
                android:text="@string/add_tag"
                android:background="@color/dark_layer_2"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="8dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/light_gray"
            android:background="@drawable/item_button"
            android:backgroundTint="@color/green"
            android:text="@string/add"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:textColor="@color/light_gray"
            android:background="@drawable/item_button"
            android:backgroundTint="@color/red"
            android:text="@string/cancel"/>
    </LinearLayout>

</LinearLayout>