<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@drawable/item_bottom_sheet">

    <!-- Container for rounded corners -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        android:backgroundTint="@color/dark_layer_2">

        <EditText
            android:id="@+id/tag_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp"
            android:inputType="text"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:textColorHint="@color/dark_gray"
            android:background="@android:color/transparent"
            android:hint="@string/entry_tag_name"/>

    </androidx.cardview.widget.CardView>

    <!-- Container for rounded corners -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        android:backgroundTint="@color/tmp_tag1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/dark_layer_1"
                android:text="@string/select_color"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="8dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/light_gray"
            android:background="@drawable/item_button"
            android:backgroundTint="@color/green"
            android:text="@string/add"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:textColor="@color/light_gray"
            android:background="@drawable/item_button"
            android:backgroundTint="@color/red"
            android:text="@string/cancel"/>
    </LinearLayout>

</LinearLayout>