<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/dark_layer_1">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <!-- Container for click listener -->
        <LinearLayout
            android:id="@+id/activity_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:onClick="closeActivity">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/ic_back"
                android:contentDescription="@string/desc_icon_back_button"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="32sp"
                android:textStyle="bold"
                android:text="@string/title_settings"/>

        </LinearLayout>

    </LinearLayout>

    <!-- Body -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <!-- Setting Item 1 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:paddingHorizontal="24dp"
            android:orientation="horizontal"
            android:background="@drawable/item_settings">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:text="@string/setting_enable_arpeggeo"/>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_enable_arpeggeo"
                android:layout_width="64dp"
                android:layout_height="32dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:checked="true"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Setting Item 2 -->
<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:paddingVertical="16dp"-->
<!--            android:paddingHorizontal="24dp"-->
<!--            android:orientation="horizontal"-->
<!--            android:background="@drawable/item_settings">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                android:textSize="16sp"-->
<!--                android:textStyle="bold"-->
<!--                android:textColor="@color/gray"-->
<!--                android:text="@string/setting_enable_sandbox"/>-->

<!--            <com.google.android.material.materialswitch.MaterialSwitch-->
<!--                android:id="@+id/switch_enable_sandbox"-->
<!--                android:layout_width="64dp"-->
<!--                android:layout_height="32dp"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"/>-->

<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

    </LinearLayout>

</LinearLayout>